clerk issue fixed - scrollbar added

--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,7 @@
 :root {
   /* something you can't do with tailwind that's why I another classes exists here */
   --primary: #202020;
+  --primary-foregorund: #303030;
   --secondary: #dddddd;
   --cta: #c15dff;
   --cta-tooltip: rgba(193, 93, 255, 0.2);
@@ -81,3 +82,27 @@ body {
 .active {
   background-color: var(--cta);
 }
+
+
+
+
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background:var(--primary);
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--primary-foregorund);
+    border-radius: 10px;
+  }
